fixed social images spacings

--- a/styles/main.css
+++ b/styles/main.css
@@ -701,14 +701,14 @@ a {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 100%;
+  max-width: 80%;
   gap: 2%;
   margin-top: 15%;
   margin-left: 15%;
 }
 
 .social-content img {
-  min-width: 100%;
+  width: 100%;
   height: 25vh;
 }
 
@@ -746,15 +746,15 @@ a {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 100%;
+  max-width: 80%;
   gap: 2%;
-  margin-top: 15%;
-  margin-left: 15%;
+  margin-top: 5%;
+  margin-left: 25%;
 }
 
 .social-content img {
-  width: 60vw;
-  height: 25vh;
+  width: 80%;
+  height: 30vh;
 }
 
 @media only screen and (max-width: 600px) {
@@ -792,10 +792,10 @@ a {
     max-width: 100%;
     gap: 2%;
     margin-top: 15%;
-    margin-left: 15%;
+    margin-left: 25%;
   }
   .social-content img {
-    width: 60vw;
+    width: 80%;
     height: 25vh;
   }
 }
