--- a/styles/social.scss
+++ b/styles/social.scss
@@ -9,12 +9,12 @@
         @include center;
         flex-direction: row;
         flex-wrap: wrap;
-        max-width: 100%;
+        max-width: 80%;
         gap: 2%;
         margin-top: 15%;
         margin-left: 15%;
         img {
-            min-width: 100%;
+            width: 100%;
             height: 25vh;
         }
     }
@@ -35,13 +35,13 @@
         @include center;
         flex-direction: row;
         flex-wrap: wrap;
-        max-width: 100%;
+        max-width: 80%;
         gap: 2%;
-        margin-top: 15%;
-        margin-left: 15%;
+        margin-top: 5%;
+        margin-left: 25%;
         img {
-            width: 60vw;
-            height: 25vh;
+            width: 80%;
+            height: 30vh;
         }
     }
     
@@ -62,9 +62,9 @@
             max-width: 100%;
             gap: 2%;
             margin-top: 15%;
-            margin-left: 15%;
+            margin-left: 25%;
             img {
-                width: 60vw;
+                width: 80%;
                 height: 25vh;
             }
         }
